@@ -2,7 +2,7 @@ module ActionDispatch
   module Routing
     ACTIVE_SCAFFOLD_CORE_ROUTING = {
         :collection => {:show_search => :get, :render_field => :post, :mark => :post},
-        :member => {:row => :get, :update_column => :post, :render_field => [:get, :post], :mark => :post}
+        :member => {:update_column => :post, :render_field => [:get, :post], :mark => :post}
     }
     ACTIVE_SCAFFOLD_ASSOCIATION_ROUTING = {
         :collection => {:edit_associated => :get, :new_existing => :get, :add_existing => :post},
